force-app/main/default/objects/Order/fields/End_Customer__c.field-meta.xml
<CustomField>
    <fullName>End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>