force-app/main/default/objects/Order/fields/EOL_Delivery_Address__c.field-meta.xml
<CustomField>
    <fullName>EOL_Delivery_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOL Delivery Address</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Address type has to be &quot;Delivery&quot; and from the Orders Account</errorMessage>
        <filterItems>
            <field>Address__c.Type__c</field>
            <operation>equals</operation>
            <value>Delivery</value>
        </filterItems>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <infoMessage>You can only fill in Delivery Adresses</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>