force-app/main/default/objects/Order/fields/EOL_Warehouse2__c.field-meta.xml
<CustomField>
    <fullName>EOL_Warehouse2__c</fullName>
    <formula>&quot;73e317d3-fa83-444e-9880-3cf348fedd77&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EOL Warehouse</label>
    <type>Text</type>
</CustomField>