force-app/main/default/objects/Order/fields/EOLinvoiceaddress__c.field-meta.xml
<CustomField>
    <fullName>EOLinvoiceaddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOL Invoice Address</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Address type has to be &quot;Invoice&quot; and from the Orders Account</errorMessage>
        <filterItems>
            <field>Address__c.Type__c</field>
            <operation>equals</operation>
            <value>Invoice</value>
        </filterItems>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Orders (EOL Invoice Address)</relationshipLabel>
    <relationshipName>OrdersInvoiceAdresses</relationshipName>
    <type>Lookup</type>
</CustomField>