force-app/main/default/objects/Order/fields/Grand_Total_NXF__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_NXF__c</fullName>
    <label>Grand Total</label>
    <summarizedField>OrderItem.Subtotal_for_Roll_Up__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Quantity</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>