force-app/main/default/objects/Order/fields/Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Incoterms__c</fullName>
    <label>Incoterms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Transportation_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>FAS</fullName>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>CIP</fullName>
            </value>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DPU</fullName>
            </value>
            <value>
                <fullName>EXW</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
                <isActive>false</isActive>
                <label>DDP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>