force-app/main/default/objects/Order/fields/IsHistoricalOrder__c.field-meta.xml
<CustomField>
    <fullName>IsHistoricalOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsHistoricalOrder?</label>
    <type>Checkbox</type>
</CustomField>