force-app/main/default/objects/Order/fields/Max_Discount_Percentge_c__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Percentge_c__c</fullName>
    <label>Max_Discount_Percentge__c</label>
    <summarizedField>OrderItem.Volume_Discount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>