force-app/main/default/objects/Order/fields/OrderHasPilot__c.field-meta.xml
<CustomField>
    <fullName>OrderHasPilot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to check if the Order already has a Pilot</description>
    <label>OrderHasPilot?</label>
    <type>Checkbox</type>
</CustomField>