force-app/main/default/objects/Order/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <label>Payment terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Immediate</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>5 days</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>8 days</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10 days</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>14 days</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 days</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>net 30 days</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>45 days</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 days</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>14 dagen, 2% korting</label>
            </value>
            <value>
                <fullName>CC</fullName>
                <label>Credit Card</label>
            </value>
            <value>
                <fullName>ct</fullName>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Fr</fullName>
                <label>Free of charge</label>
            </value>
            <value>
                <fullName>IN</fullName>
                <label>Incasso</label>
            </value>
            <value>
                <fullName>LC</fullName>
                <label>Letter of Credit</label>
            </value>
            <value>
                <fullName>SP</fullName>
                <label>Special, see below</label>
            </value>
            <value>
                <fullName>VA</fullName>
                <label>Advanced payment wire transfer</label>
            </value>
            <value>
                <fullName>VP</fullName>
                <label>Advanced with PayPal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>