force-app/main/default/objects/Order/fields/PMC_Global_Order__c.field-meta.xml
<CustomField>
    <fullName>PMC_Global_Order__c</fullName>
    <label>PMC - Global</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC</valueSetName>
    </valueSet>
</CustomField>