force-app/main/default/objects/Order/fields/PMC_Shadow_field__c.field-meta.xml
<CustomField>
    <fullName>PMC_Shadow_field__c</fullName>
    <description>This field is used as a shadow field for PMC Global in order to push it to Exact Online and make it visible on the order. Important: when a value gets added in the PMC Global, it also needs to be added in the shadow field.</description>
    <formula>CASE( PMC_Global_Order__c,

&quot;NF Industrial Water&quot;, &quot;69fa1190-7c04-4d37-910d-8e0508adef03&quot;,
&quot;NF Municipal Water&quot;, &quot;33d2590f-5047-462d-830c-7cfd75ab7144&quot;,
&quot;NF Municipal WW&quot;, &quot;dd98611e-efb1-4fee-b4d3-97b853f13ad1&quot;,
&quot;UF Municipal&quot;, &quot;35f6b715-62d8-462e-baa2-da01e618ad2c&quot;,
&quot;UF Industrial&quot;, &quot;190b4ed0-7e45-4f95-99e3-c7b025488f9e&quot;,
&quot;MF Beer&quot;, &quot;1ce70c6a-7a53-4259-bbd7-ac0217e1e555&quot;,
&quot;MF Other&quot;, &quot;73d1b0d5-1281-4c92-82e0-4dc201d19915&quot;,
&quot;MF Wine&quot;, &quot;db17c634-becc-421b-bc20-7d281d7d5deb&quot;,
&quot;NF Industrial WW&quot;, &quot;8329c0ea-c92b-419d-9be0-091c40e2e21a&quot;,
&quot;NF Process&quot;, &quot;d51ad960-b1cb-439e-9740-ca89deb5165c&quot;,
&quot;Other&quot;, &quot;9104bff3-47e8-4bba-adf3-385c6142c22c&quot;,
&quot;PMC IS NOT KNOWN IN EXACT ONLINE MAPPING&quot;

    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PMC (Shadow field)</label>
    <type>Text</type>
</CustomField>