force-app/main/default/objects/Order/fields/Quota_Match__c.field-meta.xml
<CustomField>
    <fullName>Quota_Match__c</fullName>
    <formula>IF(ISBLANK(Quota_Line__c ) , false , 

        IF( 

        AND(
            YEAR(Quota_Line__r.Quota_Date__c)= YEAR( Delivery_Date__c ),
            MONTH(Quota_Line__r.Quota_Date__c)= MONTH(Delivery_Date__c),
            Quota_Line__r.Quota__r.Account__c = AccountId,
            TEXT(Quota_Line__r.Quota__r.PMC_Global_Quota__c) = TEXT( PMC_Global_Order__c ) ,
            IF( AND( Delivery_Date__c &lt;= TODAY(), TEXT(Quota_Line__r.Category__c) = &quot;Revenue&quot;) , true, 
            IF( AND( Delivery_Date__c &gt; TODAY(), TEXT(Quota_Line__r.Category__c)  = &quot;Revenue in backlog&quot;) , true, false)

              )

           )

         , 
         true

     , 
     false

         )
     )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quota Match?</label>
    <type>Checkbox</type>
</CustomField>