force-app/main/default/objects/Order/fields/Roll_up_TEXT_for_shipping_cost_product_2__c.field-meta.xml
<CustomField>
    <fullName>Roll_up_TEXT_for_shipping_cost_product_2__c</fullName>
    <label>Roll up TEXT for shipping cost product 2</label>
    <summaryFilterItems>
        <field>OrderItem.Roll_up_TEXT_for_shipping_cost_product_2__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>