force-app/main/default/objects/Order/fields/TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp__c</fullName>
    <externalId>true</externalId>
    <label>TimeStamp</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>