force-app/main/default/objects/Order/recordTypes/Standard_Recordtype.recordType-meta.xml
<RecordType>
    <fullName>Standard_Recordtype</fullName>
    <active>true</active>
    <label>Standard Recordtype</label>
</RecordType>