force-app/main/default/objects/Order/validationRules/Add_Shipping_Line.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Shipping_Line</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

NOT(ISPICKVAL( Transportation_Status__c ,&quot;Excluded&quot;)) ,

ISPICKVAL(Status, &quot;Activated&quot;),


Roll_up_TEXT_for_shipping_cost_product_1__c = 0 ,

Roll_up_TEXT_for_shipping_cost_product_2__c = 0

)
&amp;&amp;  IsHistoricalOrder__c = false</errorConditionFormula>
    <errorMessage>You need to add Shipping/Transport cost Line at the Order Products</errorMessage>
</ValidationRule>