force-app/main/default/objects/Order/validationRules/Fill_in_info.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_in_info</fullName>
    <active>false</active>
    <description>When Order is Pilot Order fill in the Opportunity Lookup Field</description>
    <errorConditionFormula>AND(OR(
ISPICKVAL(Type, &quot;Purchase Order&quot;),
ISPICKVAL(Status, &quot;Draft&quot;),
NOT(ISBLANK(Opportunity__c)),
NOT(ISBLANK(Quote__c)),
NOT(ISBLANK(Opportunity.Linked_Pilot__c))))</errorConditionFormula>
    <errorMessage>Fill in Opportunity Pilot on the Opportunity, Opportunity, Quote</errorMessage>
</ValidationRule>