force-app/main/default/objects/Order/validationRules/Fill_in_information_before_activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_in_information_before_activation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISPICKVAL(Status,&quot;Activated&quot;),

NOT(ISPICKVAL(Incoterms__c, &quot;FCA&quot;))

&amp;&amp;

OR(

ISBLANK(AccountId),
ISBLANK(CustomerAuthorizedById),
ISBLANK(EOL_Delivery_Address__c),
ISBLANK(EOLinvoiceaddress__c)

)
 )

&amp;&amp;

IsHistoricalOrder__c = false</errorConditionFormula>
    <errorMessage>Fill in &quot;Account&quot;, &quot;Customer Authorized By&quot;, &quot;Delivery Address&quot; &amp; &quot;Invoice Address&quot;</errorMessage>
</ValidationRule>