force-app/main/default/objects/Order/validationRules/No_Pilot_Order_through_Purchase_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Pilot_Order_through_Purchase_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Type,&quot;Pilot&quot;),
ISPICKVAL(Confirmation_Type__c, &quot;Purchase Order&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot create Order Pilot from Purchase Order. You need to make a Pilot Opportunity first.</errorMessage>
</ValidationRule>