force-app/main/default/objects/Order/validationRules/OrderDate_Not_before_Expectdeliverydate.validationRule-meta.xml
<ValidationRule>
    <fullName>OrderDate_Not_before_Expectdeliverydate</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Delivery_Date__c &lt;  EffectiveDate</errorConditionFormula>
    <errorMessage>Expected Delivery Date cannot be before Start Order Date</errorMessage>
</ValidationRule>