force-app/main/default/objects/Order/validationRules/Update_Account_EOL_Customer_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_Account_EOL_Customer_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

ISPICKVAL(Status,&quot;Activated&quot;),

NOT(ISPICKVAL(Account.Customer_status_EOL__c, &quot;c&quot;))

)</errorConditionFormula>
    <errorMessage>You need to update Account Customer Status to Customer</errorMessage>
</ValidationRule>