force-app/main/default/objects/Order/validationRules/You_can_only_choose_Delivery_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>You_can_only_choose_Delivery_Address</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

NOT(ISPICKVAL(EOL_Delivery_Address__r.Type__c, &quot;4&quot;)) &amp;&amp;

NOT(ISBLANK( EOL_Delivery_Address__c ))

)</errorConditionFormula>
    <errorDisplayField>EOL_Delivery_Address__c</errorDisplayField>
    <errorMessage>You can only choose Type Delivery Address</errorMessage>
</ValidationRule>