force-app/main/default/objects/Order/validationRules/You_can_only_choose_Invoice_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>You_can_only_choose_Invoice_Address</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

NOT(ISPICKVAL(EOLinvoiceaddress__r.Type__c, &quot;3&quot;))

&amp;&amp;

NOT(ISBLANK(EOLinvoiceaddress__c))

)</errorConditionFormula>
    <errorDisplayField>EOLinvoiceaddress__c</errorDisplayField>
    <errorMessage>You can only choose type Invoice Address</errorMessage>
</ValidationRule>