force-app/main/default/objects/Order/validationRules/You_cannot_change_status.validationRule-meta.xml
<ValidationRule>
    <fullName>You_cannot_change_status</fullName>
    <active>true</active>
    <description>Other then Backoffice you cannot change status</description>
    <errorConditionFormula>AND( 

ISCHANGED(Status),

$Permission.Permission_to_change_Order_Status = false

   )</errorConditionFormula>
    <errorMessage>You cannot change status, only backoffice.</errorMessage>
</ValidationRule>