force-app/main/default/objects/Order/listViews/All_Draft_Orders_that_need_activation.listView-meta.xml
<ListView>
    <fullName>All_Draft_Orders_that_need_activation</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Quote__c</columns>
    <columns>Confirmation_Type__c</columns>
    <columns>Grand_Total_NXF__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Delivery_Date__c</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>All - Draft Orders that need activation</label>
</ListView>