force-app/main/default/objects/Order/listViews/All_pilot_Orders.listView-meta.xml
<ListView>
    <fullName>All_pilot_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>Opportunity__c</columns>
    <columns>Quote__c</columns>
    <columns>Confirmation_Type__c</columns>
    <columns>Grand_Total_NXF__c</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Delivery_Date__c</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Draft,Activated</value>
    </filters>
    <filters>
        <field>ORDERS.TYPE</field>
        <operation>equals</operation>
        <value>Pilot</value>
    </filters>
    <label>All - pilot Orders</label>
</ListView>